add main page content

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -83,3 +83,14 @@ a {
     color: #C91419;
   }
 }
+
+button {
+  padding: 0;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+  /* отображаем курсор в виде руки при наведении; некоторые
+  считают, что необходимо оставлять стрелочный вид для кнопок */
+  cursor: pointer;
+}
